Cambios en la cabecera del index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-             Cabecera
+             Aqui ira mi cabecera
               </div>
              <div id="post">
             <h1>Hola Comunidad Platzi</h1>
