finalizada la cabecera condiseño

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-             Aqui ira mi cabecera
+             Apuntes
+             <span id="tagline">Aprende conmigo</span>
               </div>
              <div id="post">
             <h1>Hola Comunidad Platzi</h1>
