--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
              <div id="post">
             <h1>Hola Comunidad Platzi</h1>
             <p>Esta es mi pequeña contribución, tratando de hacerlo solo un poco diferente para practiar mi HTML y CSS</p>
-             </div>
+            <p>con el tiempo, esto se volvera algo indispensable 
+                para el comun de la gente, aprovecha tu tiempo</p> 
+            </div>
         </div>
     </body>
 </html>
