--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
         <div id="container">
             <div id="cabecera">
              Apuntes
-             <span id="tagline">Aprende conmigo</span>
+             <span id="tagline">Aprende conmigo, Tu puedes!</span>
               </div>
              <div id="post">
             <h1>Hola Comunidad Platzi</h1>
             <p>Esta es mi pequeña contribución, tratando de hacerlo solo un poco diferente para practiar mi HTML y CSS</p>
             <p>con el tiempo, esto se volvera algo indispensable 
                 para el comun de la gente, aprovecha tu tiempo</p> 
+            <p>Sigueme en mis redes sociales</p>
             </div>
         </div>
     </body>
