--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-                Git y Github
+               Apuntes de cursos
         </title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
