color de fondo, logo y color header

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <html>
     <head>
         <title>
-<<<<<<< HEAD
-                Apuntes de cursos
-=======
-               Apuntes de cursos
->>>>>>> 8e883fe78bc6a09341e40d5048efbf7751a5df2e
+                Apuntes de cursos 2.0
         </title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
@@ -13,6 +9,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+            <img id="logo" src="img/logo.png" />
              Apuntes
              <span id="tagline">Aprende conmigo a tu ritmo</span>
               </div>
