arreglo en el nombre de las redes sociales

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>Esta es mi pequeña contribución, tratando de hacerlo solo un poco diferente para practiar mi HTML y CSS</p>
             <p>con el tiempo, esto se volvera algo indispensable 
                 para el comun de la gente, aprovecha tu tiempo</p> 
-            <p>Sigueme en mis redes sociales</p>
+            <p>Sigueme en mis redes sociales, maxinahuelanca 360_ph</p>
             </div>
         </div>
     </body>
