ult pull request :(

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <!-- comentario-->
+        <!-- comentario para pull request-->
         <title>
                 Apuntes de cursos 2.0
         </title>
